tests/ui/continue.gopp
package main

// continue: legality.

func main() {
    continue //~ ERROR continue outside of a loop
    total := 0 //~ WARN unreachable code
    for i := 0; i < 5; i++ {
        if i == 2 { continue }
        total += i
    }
    println(total)
    xs := [int]{1, 2, 3}
    _ = xs
}
